--- a/RunForestRun/app/src/main/res/values/strings.xml
+++ b/RunForestRun/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <!-- Maps Activity -->
     <string name="bStart">START</string>
     <string name="bStartStop">STOP</string>
-    <string name="bResetRoute">RESET ROUTE</string>
+    <string name="bResetRoute">CLEAR MAP</string>
     <string name="bDrawRoute">DRAW ROUTE</string>
     <string name="bAddPoi">ADD PLACES</string>
     <string name="bAddPoiStop">STOP ADDING</string>
